# internal/handlers/post-provider-email-register.go
@@ -63,7 +63,7 @@ func MakePostProviderEmailRegisterHandler(db *gorm.DB) func(*gin.Context) {
 			}
 		}
 
-		codeResp, err := auth.GenerateAuthCode(db, identity)
+		codeResp, err := auth.GenerateAuthCode(db, identity, req.CodeChallenge, string(req.CodeChallengeMethod))
 
 		if err != nil {
 			ctx.JSON(http.StatusInternalServerError, "Something went wrong :(")
@@ -73,6 +73,7 @@ func MakePostProviderEmailRegisterHandler(db *gorm.DB) func(*gin.Context) {
 		ctx.JSON(http.StatusOK, api.AuthCodeResponse{
 			Code:      codeResp.Code,
 			ExpiresIn: codeResp.ExpiresIn,
+			State:     req.State,
 		})
 	}
 }
